--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -33,11 +33,11 @@ jobs:
         run: |
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
             if [ ! -d '${{ secrets.PROJECT_PATH }}' ]; then
-              git clone  ${{ secrets.PROJECT_PATH }};
+              git clone ${{ secrets.REPO_URL }} ${ secrets.PROJECT_PATH };
             fi
             cd ${{ secrets.PROJECT_PATH }} &&
             git pull origin main &&
             bun install &&
             bun run build &&
-            bun run start -p ${{ secrets.PORT }}
+            bun run start -p ${{ secrets.SERVER_PORT }}
           "
