--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
             if [ ! -d '${{ secrets.PROJECT_PATH }}' ]; then
-              git clone ${{ secrets.REPO_URL }} ${ secrets.PROJECT_PATH };
+              git clone ${{ secrets.REPO_URL }} ${{ secrets.PROJECT_PATH }};
             fi
             cd ${{ secrets.PROJECT_PATH }} &&
             git pull origin main &&
