--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -32,11 +32,14 @@ jobs:
       - name: Deploy to server
         run: |
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
-            if [ ! -d '${{ secrets.PROJECT_PATH }}' ]; then
-              git clone ${{ secrets.REPO_URL }} ${{ secrets.PROJECT_PATH }};
-            fi
-            cd ${{ secrets.PROJECT_PATH }} &&
-            git pull origin main &&
+            if [ -d '${{ secrets.PROJECT_PATH }}' ]; then
+              cd ${{ secrets.PROJECT_PATH }} &&
+              git fetch origin &&
+              git reset --hard origin/main
+            else
+              git clone ${{ secrets.REPO_URL }} ${{ secrets.PROJECT_PATH }}
+              cd ${{ secrets.PROJECT_PATH }}
+            fi &&
             bun install &&
             bun run build &&
             bun run start -p ${{ secrets.SERVER_PORT }}
