--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -12,17 +12,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Run linting
-        run: bun run lint
-
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
@@ -37,8 +26,10 @@ jobs:
             cd ${{ secrets.PROJECT_PATH }};
             git pull origin main;
             pid=$(lsof -t -i:${{ secrets.PORT }}) && kill -9 $pid || true;
-            bun install;
-            bun run build;
+            bun install || { echo 'Installation failed'; exit 1; }
+            bun run build || { echo 'Build failed'; exit 1; }
+            rm -f .env
+            echo '${{ secrets.ENV_VAR }}' > .env;
             nohup bun run start -p ${{ secrets.PORT }} > app.log 2>&1 &
             echo 'Application started successfully'
           "
