--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -25,22 +25,19 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh root@${{ secrets.SERVER_IP }} "
+          ssh root@${{ secrets.SERVER_IP }} "}"
             export PATH=/root/.bun/bin:$PATH;
             cd ${{ secrets.PROJECT_PATH }} || git clone ${{ secrets.REPO_URL }} ${{ secrets.PROJECT_PATH }};
             cd ${{ secrets.PROJECT_PATH }};
-            git fetch origin;
             git pull origin main;
-            rm -f .env;
-            echo '${{ secrets.ENV_VAR }}' > .env;
-            bun install || { echo 'Installation failed'; exit 1; }
-            bun run build || { echo 'Build failed'; exit 1; }
-            pid=\$(lsof -t -i:${{ secrets.PORT }}) && kill -9 \$pid || true;
-            if bun run start -p ${{ secrets.PORT }} &; then
-              echo 'Application started successfully';
-              exit 0;  # Successful exit
+            pid=$(lsof -t -i:${{ secrets.SERVER_PORT }}) && kill -9 $pid || true;
+            bun install;
+            bun run build;
+            if nohup bun run start -p ${{ secrets.SERVER_PORT }} > app.log 2>&1 & then
+              echo 'Application started successfully'
+              exit 0
             else
-              echo 'Application start failed';
-              exit 1;  # Exit with error code
+              echo 'Failed to start application'
+              exit 1
             fi
           "
