--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -30,10 +30,10 @@ jobs:
             cd ${{ secrets.PROJECT_PATH }} || git clone ${{ secrets.REPO_URL }} ${{ secrets.PROJECT_PATH }};
             cd ${{ secrets.PROJECT_PATH }};
             git pull origin main;
-            pid=$(lsof -t -i:${{ secrets.SERVER_PORT }}) && kill -9 $pid || true;
+            pid=$(lsof -t -i:${{ secrets.SERVER_PORT }} || true) && [ -n "$pid" ] && kill -9 $pid || true;
             bun install;
             bun run build;
-            if nohup bun run start -p ${{ secrets.SERVER_PORT }} > app.log 2>&1 & then
+            if nohup bun run start -p ${{ secrets.PORT }} > app.log 2>&1 & then
               echo 'Application started successfully'
               exit 0
             else
