--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -26,18 +26,24 @@ jobs:
       - name: Deploy to server
         run: |
           ssh root@${{ secrets.SERVER_IP }} "
-            export PATH=/root/.bun/bin:$PATH;
-            cd ${{ secrets.PROJECT_PATH }} || git clone ${{ secrets.REPO_URL }} ${{ secrets.PROJECT_PATH }};
-            cd ${{ secrets.PROJECT_PATH }};
-            git pull origin main;
-            pid=$(lsof -t -i:${{ secrets.SERVER_PORT }} || true) && [ -n "$pid" ] && kill -9 $pid || true;
-            bun install;
-            bun run build;
-            if nohup bun run start -p ${{ secrets.PORT }} > app.log 2>&1 & then
-              echo 'Application started successfully'
-              exit 0
-            else
-              echo 'Failed to start application'
-              exit 1
-            fi
+            export PATH=/root/.bun/bin:$PATH || { echo 'Failed to set PATH'; exit 1; }
+            cd ${{ secrets.PROJECT_PATH }} || { echo 'Failed to change directory'; exit 1; }
+            git pull origin main || { echo 'Failed to pull latest changes'; exit 1; }
+            pid=$(lsof -ti:${{ secrets.PORT }}) && kill -9 $pid || true
+            bun install || { echo 'Failed to install dependencies'; exit 1; }
+            bun run build || { echo 'Failed to build the project'; exit 1; }
+            for i in {1..5}; do
+              if ! lsof -ti:${{ secrets.PORT }}; then
+                nohup bun run start -p ${{ secrets.PORT }} > app.log 2>&1 &
+                sleep 5
+                if grep -q 'Ready in' app.log; then
+                  echo 'Application started successfully'
+                  exit 0
+                fi
+              fi
+              echo 'Port ${{ secrets.PORT }} is in use, retrying...'
+              sleep 5
+            done
+            echo 'Failed to start application after multiple attempts'
+            exit 1
           "
